SFDCProject/src/objects/Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectId__c</fullName>
        <externalId>true</externalId>
        <label>SObjectId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Debug Log</label>
    <nameField>
        <label>Debug Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>